# fm-size

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
src/: config.rs  csv_writer.rs  data_models.rs  file_finder.rs  fmdevtool.rs  lib.rs  logger.rs  main.rs  processor.rs  utils.rs
tests/: config_unit_test.rs  csv_writer_unit_test.rs  e2e_test.rs  fmdevtool_unit_test.rs  integration_test.rs  logger_unit_test.rs
tests/e2e/expected_output/full_run_recursive_multithreaded_cli_args/: fm-size-dbs.csv  fm-size-durations.csv  fm-size-fields.csv  fm-size-tables.csv
tests/fixtures/errors/invalid_ear_key/: Contacts.fmp12
tests/fixtures/errors/invalid_login_credentials/: Meetings.fmp12
tests/fixtures/no_errors/: BrojDva.fmp12  Ooe.fmp12  config.json
tests/fixtures/no_errors/subfolder/: Assets.fmp12
tests/unit/: config_test.rs  csv_writer_test.rs  file_finder_test.rs  fmdevtool_test.rs  logger_test.rs  utils_test.rs
