[package]
name = "fm-size"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
quick-xml = "0.31"
tempfile = "3.8"
encoding_rs = "0.8"
rpassword = "7.3"

[dev-dependencies]
tempfile = "3.8"
